# flat1-network-node

./: Cargo.toml  README.md
node/: Cargo.toml
node/src/: benchmarking.rs  chain_spec.rs  command.rs  rpc.rs  service.rs
pallets/collectibles/: Cargo.toml
pallets/collectibles/src/: lib-ref.rs  lib.rs
pallets/template/: Cargo.toml
pallets/template/src/: weights.rs
runtime/: Cargo.toml
